--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="banner__block"></div>
+    <div class="banner__block"><div class="banner1"></div></div>
 </body>
 </html>
