--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="logo"><img src="logo.svg"/></div>
     <div class="banner__block"><div class="banner1"></div></div>
 </body>
 </html>
