--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div id="logo"><img src="logo.svg"/></div>
-    <div class="banner__block"><div class="banner1"></div></div>
+    <div class="banner__block"></div>
+    <div class="second__box"></div>
 </body>
 </html>
